--- a/css/base.css
+++ b/css/base.css
@@ -15,7 +15,7 @@ body {
     max-width: 1000px;
     height: auto;
     margin: 0 auto;
-position: relative;
+    position: relative;
 }
 
 h1 {
@@ -28,23 +28,32 @@ h1 {
 
 input,
 .task-item,
+.task-detail-mask,
+textarea,
 button {
     border-radius: 4px;
     padding: 10px;
 }
 
+textarea,
+button,
 input[type=text],
 input[type=date] {
     border: 0;
+}
+
+input[type=text],
+input[type=date] {
     display: block;
     width: 100%;
     background: #ddd;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, .4)
 }
+
 input[type=text]:hover,
 input[type=date]:hover,
 input[type=date]:focus,
-input[type=date]:focus{
+input[type=date]:focus {
     background: #fff;
 }
 
@@ -77,23 +86,42 @@ input[type=date]:focus{
 
 button {
     display: inline-block;
-    border: 0;
     cursor: pointer;
     color: #333;
 }
-.task-detail-mask,.task-detail{
-   position: absolute;
+
+.task-detail-mask,
+.task-detail {
+    position: absolute;
 }
-.task-detail{
+
+.task-detail {
     background: #fff;
+    color: #333;
     padding: 10px;
+    width: 50%;
     bottom: 0;
     right: 0;
 }
-.task-detail-mask{
+
+.task-detail .content {
+    padding: 10px;
+    font-weight: 900;
+    cursor: pointer;
+}
+
+.task-detail>* {
+    margin-bottom: 10px;
+}
+
+.task-detail-mask {
     top: 0;
-    bottom:0;
+    bottom: 0;
     right: 0;
     left: 0;
     background: rgba(30, 30, 30, .4);
+}
+textarea{
+    min-height: 200px;
+    background: #999;
 }
