--- a/css/base.css
+++ b/css/base.css
@@ -22,7 +22,7 @@ h1 {
     text-align: center;
 }
 
-.task-list {
+.tasks-list {
     margin: 10px 0;
 }
 
@@ -42,6 +42,7 @@ input[type=date] {
     border: 0;
 }
 
+textarea,
 input[type=text],
 input[type=date] {
     display: block;
@@ -77,7 +78,8 @@ input[type=date]:focus {
     color: #333;
     box-shadow: 0 2px 3px rgba(0, 0, 0, .4);
     cursor: pointer;
-    margin: 4px;
+    margin-bottom: 4px;
+    cursor: pointer;
 }
 
 .task-item:hover {
@@ -93,6 +95,7 @@ button {
 .task-detail-mask,
 .task-detail {
     position: absolute;
+    display: none;
 }
 
 .task-detail {
@@ -100,6 +103,7 @@ button {
     color: #333;
     padding: 10px;
     width: 50%;
+    height: 100%;
     bottom: 0;
     right: 0;
 }
@@ -121,7 +125,8 @@ button {
     left: 0;
     background: rgba(30, 30, 30, .4);
 }
-textarea{
+
+textarea {
     min-height: 200px;
     background: #999;
 }
