--- a/css/base.css
+++ b/css/base.css
@@ -91,7 +91,21 @@ input[type=date]:focus {
     margin-bottom: 4px;
     cursor: pointer;
 }
-
+.task-item.completed {
+    color: #aaa;
+    background: rgba(255,255,255,.7);
+    opacity:0.8;
+}
+.task-item.completed::after{
+    content: '';
+    height: 1px;
+    background: #aaa;
+    width: 96%;
+    position: relative;
+    top: -8px;
+    display: block;
+    float: right;
+}
 .task-item:hover {
     background: #ddd;
 }
