--- a/css/base.css
+++ b/css/base.css
@@ -70,7 +70,7 @@ input[type=date]:focus {
     width: 84%;
     margin-right: 1%;
 }
-
+button.primary,
 [type=submit] {
     background: #46b1e4;
 }
@@ -132,6 +132,7 @@ button {
     right: 0;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
     border-radius: 4px 0 0 4px;
+    overflow: auto;
 }
 
 
